@@ -38,6 +38,11 @@ this repository contains the full copyright notices and license terms. -->
         </record>
         <menuitem parent="menu_ui"
             action="act_view_form" id="menu_view"/>
+        <record model="ir.model.button" id="view_show_button">
+            <field name="name">show</field>
+            <field name="string">Show</field>
+            <field name="model" search="[('model', '=', 'ir.ui.view')]"/>
+        </record>
 
         <record model="ir.ui.view" id="view_tree_width_view_form">
             <field name="model">ir.ui.view_tree_width</field>
